--- a/app/src/main/res/layout/activity_language_switch.xml
+++ b/app/src/main/res/layout/activity_language_switch.xml
@@ -14,6 +14,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/d20"
         android:background="@color/white"
-        tools:listitem="@layout/item_setting" />
+        tools:listitem="@layout/item_language_switch" />
 
 </LinearLayout>
