--- a/app/src/main/res/layout/activity_insert_address.xml
+++ b/app/src/main/res/layout/activity_insert_address.xml
@@ -17,37 +17,34 @@
             android:id="@+id/tv_account_address_key"
             style="@style/black_16_text_style"
             android:layout_marginTop="@dimen/d20"
-            android:text="@string/address_name" />
+            android:text="@string/address_alias" />
 
 
         <EditText
             android:id="@+id/et_address_name"
-            style="@style/black_14_single_edit_text_style"
-            android:layout_alignBottom="@+id/tv_account_address_key"
-            android:layout_marginLeft="@dimen/d32"
-            android:layout_toRightOf="@+id/tv_account_address_key"
-            android:hint="@string/address_alias" />
+            style="@style/black30_14_edit_text_style"
+            android:layout_below="@+id/tv_account_address_key"
+            android:hint="@string/please_input_address_name" />
 
         <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/d1"
-            android:layout_below="@+id/tv_account_address_key"
-            android:layout_marginTop="@dimen/d16"
-            android:background="@color/black10_1d2124" />
+            style="@style/line_style"
+            android:layout_below="@+id/et_address_name"
+            android:layout_marginTop="@dimen/d20" />
 
         <TextView
             android:id="@+id/tv_address_key"
             style="@style/black_16_text_style"
-            android:layout_below="@+id/tv_account_address_key"
+            android:layout_below="@+id/et_address_name"
             android:layout_marginTop="@dimen/d36"
-            android:text="@string/address" />
+            android:text="@string/account_address" />
 
         <EditText
             android:id="@+id/et_address"
-            style="@style/black_14_single_edit_text_style"
+            style="@style/black30_14_edit_text_style"
             android:layout_below="@+id/tv_address_key"
-            android:layout_marginBottom="@dimen/d16"
-            android:hint="@string/please_input_address" />
+            android:layout_marginBottom="@dimen/d20"
+            android:layout_marginTop="@dimen/d20"
+            android:hint="@string/please_input_receive_account" />
 
     </RelativeLayout>
 
@@ -57,6 +54,5 @@
         android:layout_marginLeft="@dimen/d12"
         android:layout_marginRight="@dimen/d12"
         android:layout_marginTop="@dimen/d30"
-        android:enabled="false"
         android:text="@string/save" />
 </LinearLayout>
