--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,11 +6,17 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-    <include
-        layout="@layout/activity_brand"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/d0"
-        android:layout_weight="1.3" />
+        android:layout_weight="1.3"
+        android:gravity="center">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/icon_bcaas" />
+    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
