--- a/app/src/main/res/layout/activity_import_wallet.xml
+++ b/app/src/main/res/layout/activity_import_wallet.xml
@@ -37,8 +37,8 @@
             android:layout_height="@dimen/d20"
             android:layout_alignParentRight="true"
             android:layout_marginTop="@dimen/d20"
-            android:background="@mipmap/icon_add"
-            android:padding="@dimen/d3" />
+            android:background="@mipmap/icon_scan_code"
+            android:padding="@dimen/d5" />
     </RelativeLayout>
 
     <Button
