--- a/app/src/main/res/layout/include_edit_text_password.xml
+++ b/app/src/main/res/layout/include_edit_text_password.xml
@@ -1,39 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/rl_password_key"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ll_password_key"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/d20"
     android:layout_marginRight="@dimen/d20"
-    android:layout_marginTop="@dimen/d10">
+    android:layout_marginTop="@dimen/d10"
+    android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/et_password"
-        style="@style/black_14_single_edit_text_style"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:background="@color/transparent"
-        android:digits="@string/password_rule"
-        android:drawablePadding="@dimen/d10"
-        android:hint="@string/input_password"
-        android:inputType="textPassword"
-        android:maxLength="16"
-        android:paddingRight="@dimen/d40" />
+        android:layout_height="wrap_content">
 
-    <CheckBox
-        android:id="@+id/cbPwd"
-        android:layout_width="@dimen/d25"
-        android:layout_height="@dimen/d25"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:background="@color/transparent"
-        android:button="@drawable/selector_cb_password"
-        android:checked="false"
-        android:gravity="center" />
+        <EditText
+            android:id="@+id/et_password"
+            style="@style/black_14_single_edit_text_style"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:background="@color/transparent"
+            android:digits="@string/password_rule"
+            android:drawablePadding="@dimen/d10"
+            android:hint="@string/input_password"
+            android:inputType="textPassword"
+            android:maxLength="16"
+            android:paddingRight="@dimen/d40" />
+
+        <CheckBox
+            android:id="@+id/cbPwd"
+            android:layout_width="@dimen/d25"
+            android:layout_height="@dimen/d25"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:background="@color/transparent"
+            android:button="@drawable/selector_cb_password"
+            android:checked="false"
+            android:gravity="center" />
+    </RelativeLayout>
 
     <View
         android:id="@+id/v_password_line"
         style="@style/line_style"
-        android:layout_below="@+id/et_password" />
-</RelativeLayout>
+        android:layout_marginTop="@dimen/d16" />
+</LinearLayout>
