--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,114 +6,98 @@
     android:orientation="vertical">
 
     <RelativeLayout
-        style="@style/bg_gradual_change_style"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/d10"
+        android:layout_marginRight="@dimen/d10"
         android:layout_marginTop="@dimen/d20"
-        android:paddingRight="@dimen/d5">
+        android:background="@mipmap/img_bg_home"
+        android:paddingLeft="@dimen/d10"
+        android:paddingRight="@dimen/d10">
 
         <TextView
             android:id="@+id/tv_address_key"
-            style="@style/black_16_text_style"
-            android:layout_marginTop="@dimen/d16"
+            style="@style/white_14_text_style"
+            android:layout_marginTop="@dimen/d20"
             android:text="@string/my_account_address" />
-
-        <Button
-            android:id="@+id/btn_copy"
-            android:layout_width="@dimen/d18"
-            android:layout_height="@dimen/d18"
-            android:layout_alignBottom="@+id/tv_address_key"
-            android:layout_alignParentRight="true"
-            android:background="@mipmap/icon_copy"
-            android:padding="@dimen/d4" />
 
         <TextView
             android:id="@+id/tv_account_address_value"
             style="@style/white70_14_text_style"
-            android:layout_marginLeft="@dimen/d10"
-            android:layout_marginTop="@dimen/d16"
-            android:layout_toLeftOf="@+id/btn_copy"
-            android:layout_toRightOf="@+id/tv_address_key"
-            android:gravity="center|right"
-            android:textColor="@color/black70_1d2124" />
-
-
-        <TextView
-            android:id="@+id/tv_currency_key"
-            style="@style/black_16_text_style"
-            android:layout_width="wrap_content"
             android:layout_below="@+id/tv_address_key"
-            android:layout_marginTop="@dimen/d16"
-            android:text="@string/currency" />
+            android:layout_marginTop="@dimen/d10"
+            android:gravity="center|left" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/tv_currency_key"
-            android:layout_alignParentRight="true"
-            android:layout_below="@+id/tv_address_key"
-            android:layout_marginLeft="@dimen/d10"
-            android:layout_marginTop="@dimen/d16"
-            android:layout_toRightOf="@+id/tv_currency_key"
-            android:gravity="bottom|right"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tv_currency"
-                style="@style/black_16_text_style"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:drawablePadding="@dimen/d5"
-                android:drawableRight="@mipmap/icon_dropdown"
-                android:textSize="@dimen/text_size_12" />
-        </LinearLayout>
+        <Button
+            android:id="@+id/btn_copy"
+            android:layout_width="@dimen/d16"
+            android:layout_height="@dimen/d16"
+            android:layout_alignBottom="@+id/tv_account_address_value"
+            android:layout_marginLeft="@dimen/d12"
+            android:layout_toRightOf="@+id/tv_account_address_value"
+            android:background="@mipmap/icon_copy_white"
+            android:padding="@dimen/d4" />
 
         <TextView
             android:id="@+id/tv_balance_key"
-            style="@style/black_16_text_style"
-            android:layout_below="@+id/tv_currency_key"
-            android:layout_marginBottom="@dimen/d16"
+            style="@style/white_14_text_style"
+            android:layout_below="@+id/tv_account_address_value"
             android:layout_marginTop="@dimen/d16"
             android:text="@string/account_balance" />
 
         <TextView
             android:id="@+id/tv_balance"
-            style="@style/black_16_text_style"
+            style="@style/white_bold_28_text_style"
             android:layout_width="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_below="@+id/tv_currency_key"
-            android:layout_marginLeft="@dimen/d10"
-            android:layout_marginTop="@dimen/d16"
-            android:gravity="center|right"
-            android:textColor="@color/orange_yellow"
-            tools:text="0" />
+            android:layout_below="@+id/tv_balance_key"
+            android:layout_marginTop="@dimen/d8"
+            android:gravity="center|left" />
 
         <ProgressBar
             android:id="@+id/pb_balance"
             android:layout_width="@dimen/d20"
             android:layout_height="@dimen/d20"
-            android:layout_alignParentRight="true"
-            android:layout_below="@+id/tv_currency_key"
-            android:layout_marginRight="@dimen/d5"
-            android:layout_marginTop="@dimen/d16"
-            android:gravity="center|right"
-            android:indeterminateTint="@color/orange_yellow"
+            android:layout_below="@+id/tv_balance_key"
+            android:layout_marginTop="@dimen/d8"
+            android:gravity="center|left"
+            android:indeterminateTint="@color/white"
             android:visibility="gone" />
 
+        <LinearLayout
+            android:id="@+id/ll_select_currency"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_balance"
+            android:layout_marginBottom="@dimen/d38"
+            android:layout_marginTop="@dimen/d16"
+            android:background="@drawable/bg_select_currency"
+            android:gravity="bottom|left"
+            android:minWidth="@dimen/d80"
+            android:orientation="horizontal">
 
+            <TextView
+                android:id="@+id/tv_currency"
+                style="@style/white_14_text_style"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawablePadding="@dimen/d5"
+                android:drawableRight="@mipmap/icon_select_white"
+                android:gravity="center|right" />
+        </LinearLayout>
     </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/ll_transaction"
         style="@style/bg_white_style"
         android:layout_marginBottom="@dimen/d16"
-        android:layout_marginTop="@dimen/d35"
+        android:layout_marginTop="@dimen/d12"
         android:layout_weight="3"
         android:orientation="vertical"
         android:visibility="invisible">
 
         <TextView
             style="@style/black_16_text_style"
-            android:layout_marginTop="@dimen/d16" />
+            android:layout_marginTop="@dimen/d20" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvPendingTransaction"
