--- a/app/src/main/res/layout/activity_brand.xml
+++ b/app/src/main/res/layout/activity_brand.xml
@@ -17,7 +17,6 @@
             android:id="@+id/iv_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
             android:scaleType="fitCenter"
             android:src="@mipmap/icon_bcaas_white" />
 
@@ -26,6 +25,6 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/d0"
-        android:layout_weight="2"></View>
+        android:layout_weight="2" />
 
 </LinearLayout>
