--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,13 +9,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/d0"
-        android:layout_weight="1.3"
+        android:layout_weight="1"
         android:gravity="center">
 
-        <Button
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@mipmap/icon_bcaas" />
+            android:background="@color/transparent"
+            android:src="@mipmap/icon_bcaas" />
     </LinearLayout>
 
     <RelativeLayout
