--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -95,7 +95,7 @@
                                     android:layout_marginLeft="@dimen/d5"
                                     android:layout_marginRight="@dimen/d5"
                                     android:gravity="left"
-                                    android:indeterminateTint="@color/orange_yellow"
+                                    android:indeterminateTint="@color/bcaas_color"
                                     android:visibility="gone" />
                             </RelativeLayout>
                         </LinearLayout>
@@ -140,7 +140,7 @@
                                 android:layout_centerVertical="true"
                                 android:layout_marginLeft="@dimen/d16"
                                 android:layout_toRightOf="@+id/tv_currency_key"
-                                android:background="@mipmap/icon_dropdown" />
+                                android:background="@mipmap/icon_select_red" />
                         </RelativeLayout>
                     </LinearLayout>
                 </RelativeLayout>
@@ -175,17 +175,16 @@
                     android:layout_marginTop="@dimen/d16"
                     android:text="@string/account_address" />
 
-                <TextView
-                    android:id="@+id/tv_select_address"
-                    android:layout_width="@dimen/d32"
-                    android:layout_height="match_parent"
+                <ImageButton
+                    android:id="@+id/ib_select_address"
+                    android:layout_width="@dimen/d31"
+                    android:layout_height="@dimen/d33"
                     android:layout_alignBottom="@+id/tv_account_address_key"
                     android:layout_alignParentRight="true"
                     android:layout_below="@+id/v_line"
-                    android:drawablePadding="@dimen/d5"
-                    android:drawableRight="@mipmap/icon_dropdown"
-                    android:textColor="@color/grey"
-                    android:textSize="@dimen/text_size_14" />
+                    android:background="@color/transparent"
+                    android:padding="@dimen/d5"
+                    android:src="@mipmap/icon_select_address" />
 
                 <EditText
                     android:id="@+id/et_input_destination_address"
