--- a/app/src/main/res/layout/activity_insert_address.xml
+++ b/app/src/main/res/layout/activity_insert_address.xml
@@ -22,6 +22,7 @@
 
         <EditText
             android:id="@+id/et_address_name"
+            android:focusable="true"
             style="@style/black30_14_edit_text_style"
             android:layout_below="@+id/tv_account_address_key"
             android:hint="@string/please_input_address_name" />
