--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,13 +2,30 @@
 
 
     <!-- 用上面的一种主题竟然-->
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Base.Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/bcaas_color</item>
-        <item name="colorPrimaryDark">@color/white</item>
-        <item name="colorAccent">@color/white</item>
+
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar" />
+
+
+    <!-- android去掉layout顶部的阴影（状态栏下边的阴影） -->
+    <style name="Theme.bcaas" parent="AppTheme">
+        <item name="android:showDividers">none</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="colorPrimary">@color/theme_grey</item>
+        <item name="colorPrimaryDark">@color/grey2</item>
+        <item name="colorAccent">@color/grey</item>
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorSecondary">@color/white</item>
+        <!--<item name="android:background">@android:color/transparent</item>-->
     </style>
+
+
+    <!--&lt;!&ndash; Base application theme. &ndash;&gt;-->
+    <!--<style name="AppTheme" parent="Base.Theme.AppCompat.Light.DarkActionBar">-->
+        <!--&lt;!&ndash; Customize your theme here. &ndash;&gt;-->
+        <!--<item name="colorPrimary">@color/bcaas_color</item>-->
+        <!--<item name="colorPrimaryDark">@color/white</item>-->
+        <!--<item name="colorAccent">@color/white</item>-->
+    <!--</style>-->
 
     <style name="dialog_loading" parent="Theme.AppCompat.Dialog">
         <item name="android:windowFrame">@null</item>
