--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -21,6 +21,7 @@
         android:layout_marginTop="@dimen/d30"
         android:background="@color/white"
         android:text="@string/logout"
+        android:textColor="@color/black_1d2124"
         android:textSize="@dimen/text_size_16" />
 
 </LinearLayout>
