--- a/app/src/main/res/layout/activity_brand.xml
+++ b/app/src/main/res/layout/activity_brand.xml
@@ -22,9 +22,20 @@
 
     </LinearLayout>
 
-    <View
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/d0"
-        android:layout_weight="2" />
+        android:layout_weight="2"
+        android:gravity="center_horizontal|bottom"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_marginBottom="@dimen/d30"
+            android:text="@string/brand_info"
+            android:textColor="@color/white70_fa" />
+    </LinearLayout>
 
 </LinearLayout>
