--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -70,7 +70,7 @@
                                 style="@style/black50_12_text_style"
                                 android:layout_width="wrap_content"
                                 android:gravity="left"
-                                android:text="@string/balance"
+                                android:text="@string/account_balance"
                                 android:textSize="@dimen/text_size_12" />
 
                             <RelativeLayout
