--- a/app/src/main/res/layout/activity_import_wallet.xml
+++ b/app/src/main/res/layout/activity_import_wallet.xml
@@ -31,14 +31,12 @@
             android:maxLength="51"
             android:maxLines="2" />
 
-        <Button
-            android:id="@+id/btn_scan"
-            android:layout_width="@dimen/d20"
-            android:layout_height="@dimen/d20"
+        <ImageButton
+            android:id="@+id/ib_scan"
+            style="@style/ib_style"
+            android:layout_alignBottom="@+id/tv_title"
             android:layout_alignParentRight="true"
-            android:layout_marginTop="@dimen/d20"
-            android:background="@mipmap/icon_scan_code"
-            android:padding="@dimen/d5" />
+            android:src="@mipmap/icon_scan_code" />
     </RelativeLayout>
 
     <Button
