--- a/app/src/main/res/layout/activity_insert_address.xml
+++ b/app/src/main/res/layout/activity_insert_address.xml
@@ -22,9 +22,9 @@
 
         <EditText
             android:id="@+id/et_address_name"
-            android:focusable="true"
             style="@style/black30_14_edit_text_style"
             android:layout_below="@+id/tv_account_address_key"
+            android:focusable="true"
             android:hint="@string/please_input_address_name" />
 
         <View
@@ -47,15 +47,13 @@
             android:layout_marginTop="@dimen/d20"
             android:hint="@string/please_input_receive_account" />
 
-        <Button
-            android:id="@+id/btn_scan"
-            android:layout_width="@dimen/d20"
-            android:layout_height="@dimen/d20"
+        <ImageButton
+            android:id="@+id/ib_scan"
+            style="@style/ib_style"
             android:layout_alignBottom="@+id/tv_address_key"
             android:layout_alignParentRight="true"
             android:layout_marginTop="@dimen/d20"
-            android:background="@mipmap/icon_scan_code"
-            android:padding="@dimen/d5" />
+            android:src="@mipmap/icon_scan_code" />
     </RelativeLayout>
 
     <Button
