--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/theme_grey"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -86,27 +87,45 @@
         </LinearLayout>
     </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/ll_transaction"
+    <RelativeLayout
+        android:id="@+id/rl_transaction"
         style="@style/bg_white_style"
-        android:layout_marginBottom="@dimen/d16"
+        android:layout_marginBottom="@dimen/d35"
         android:layout_marginTop="@dimen/d12"
-        android:layout_weight="3"
-        android:orientation="vertical"
-        android:visibility="invisible">
+        android:layout_weight="3">
 
         <TextView
+            android:id="@+id/tv_transaction_record_key"
             style="@style/black_16_text_style"
-            android:layout_marginTop="@dimen/d20" />
+            android:layout_marginTop="@dimen/d20"
+            android:text="@string/transaction_records" />
+
+        <ImageView
+            android:id="@+id/iv_no_record"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="@dimen/d20"
+            android:src="@mipmap/img_no_data"
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/tv_no_transaction_record"
+            style="@style/black30_14_text_style"
+            android:layout_below="@+id/iv_no_record"
+            android:layout_centerHorizontal="true"
+            android:text="@string/no_transaction_records"
+            android:visibility="invisible" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvPendingTransaction"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_transaction_record_key"
             android:layout_marginTop="@dimen/d8"
             android:scrollbars="none"
             tools:listitem="@layout/item_transaction" />
-    </LinearLayout>
+    </RelativeLayout>
 
 
 </LinearLayout>
