--- a/app/src/main/res/layout/item_address.xml
+++ b/app/src/main/res/layout/item_address.xml
@@ -20,17 +20,15 @@
         android:layout_marginLeft="@dimen/d12"
         android:layout_marginRight="@dimen/d5"
         android:layout_marginTop="@dimen/d16"
-        android:layout_toLeftOf="@+id/btn_delete"
+        android:layout_toLeftOf="@+id/ib_delete"
         android:maxLines="2" />
 
-    <Button
-        android:id="@+id/btn_delete"
-        android:layout_width="@dimen/d26"
-        android:layout_height="@dimen/d26"
+    <ImageButton
+        style="@style/ib_style"
+        android:id="@+id/ib_delete"
         android:layout_alignBottom="@+id/tv_alias"
         android:layout_alignParentRight="true"
-        android:background="@mipmap/icon_delete"
-        android:padding="@dimen/d5" />
+        android:src="@mipmap/icon_delete" />
 
 
 </RelativeLayout>
