去掉「创建」、「导入」的边框底部布局 设置账户地址全称考虑显示两行问题

--- a/app/src/main/res/layout/activity_wallet_created_success.xml
+++ b/app/src/main/res/layout/activity_wallet_created_success.xml
@@ -22,6 +22,8 @@
             android:id="@+id/tv_account_address"
             style="@style/black70_14_text_style"
             android:layout_marginTop="@dimen/d16"
+            android:lineHeight="@dimen/d22"
+            android:maxHeight="@dimen/d44"
             android:maxLines="2" />
 
         <View
