--- a/app/src/main/res/layout/activity_modify_authorized_presentatives.xml
+++ b/app/src/main/res/layout/activity_modify_authorized_presentatives.xml
@@ -24,6 +24,8 @@
         <TextView
             android:id="@+id/tv_account_address"
             style="@style/black30_14_text_style"
+            android:lineHeight="@dimen/d22"
+            android:maxHeight="@dimen/d44"
             android:layout_marginBottom="@dimen/d20"
             android:layout_marginTop="@dimen/d20"
             android:maxLines="2" />
