--- a/app/src/main/res/layout/item_address.xml
+++ b/app/src/main/res/layout/item_address.xml
@@ -19,6 +19,8 @@
         android:layout_below="@+id/tv_alias"
         android:layout_marginLeft="@dimen/d12"
         android:layout_marginRight="@dimen/d5"
+        android:lineHeight="@dimen/d22"
+        android:maxHeight="@dimen/d44"
         android:layout_marginTop="@dimen/d16"
         android:layout_toLeftOf="@+id/ib_delete"
         android:maxLines="2" />
