--- a/app/src/main/res/layout/activity_brand.xml
+++ b/app/src/main/res/layout/activity_brand.xml
@@ -2,40 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/img_brand"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/iv_logo"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/d0"
-        android:layout_weight="1"
-        android:gravity="center_horizontal|bottom"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/iv_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="fitCenter"
-            android:src="@mipmap/icon_bcaas_white" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/d0"
-        android:layout_weight="2"
-        android:gravity="center_horizontal|bottom"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|bottom"
-            android:layout_marginBottom="@dimen/d30"
-            android:text="@string/brand_info"
-            android:textColor="@color/white70_fa" />
-    </LinearLayout>
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@mipmap/img_brand" />
 
 </LinearLayout>
