--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/d0"
         android:layout_weight="1"
-        android:gravity="center">
+        android:gravity="center|bottom">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -22,6 +22,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/d0"
+        android:layout_marginTop="@dimen/d76"
         android:layout_weight="2">
 
         <include
