--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -160,7 +160,7 @@
                     android:id="@+id/tv_transaction_block_title"
                     style="@style/blue_16_text_style"
                     android:layout_marginTop="@dimen/d20"
-                    android:text="@string/receive_account" />
+                    android:text="@string/receive_account_address" />
 
                 <View
                     android:id="@+id/v_line"
@@ -195,7 +195,7 @@
                     android:lineHeight="@dimen/d22"
                     android:maxLines="2"
                     android:layout_below="@+id/tv_account_address_key"
-                    android:hint="@string/please_input_address" />
+                    android:hint="@string/please_enter_address" />
 
                 <View
                     android:id="@+id/v_line_2"
