--- a/app/src/main/res/layout/include_edit_text_password.xml
+++ b/app/src/main/res/layout/include_edit_text_password.xml
@@ -21,7 +21,7 @@
             android:background="@color/transparent"
             android:digits="@string/password_rule"
             android:drawablePadding="@dimen/d10"
-            android:hint="@string/input_password"
+            android:hint="@string/enter_password"
             android:inputType="textPassword"
             android:maxLength="16"
             android:paddingRight="@dimen/d40" />
