修改授权代表逻辑 检测change返回的状态。 2030:地址重复 2033:地址格式错误

--- a/app/src/main/res/layout/activity_modify_authorized_presentatives.xml
+++ b/app/src/main/res/layout/activity_modify_authorized_presentatives.xml
@@ -27,7 +27,7 @@
             android:lineHeight="@dimen/d22"
             android:maxHeight="@dimen/d44"
             android:layout_marginBottom="@dimen/d20"
-            android:layout_marginTop="@dimen/d20"
+            android:layout_marginTop="@dimen/d16"
             android:maxLines="2" />
 
     </LinearLayout>
@@ -52,9 +52,7 @@
             style="@style/black30_14_edit_text_style"
             android:layout_below="@+id/tv_title"
             android:layout_marginBottom="@dimen/d20"
-            android:layout_marginTop="@dimen/d20"
-            android:hint="@string/enter_address_of_the_authorized"
-            android:maxLines="2" />
+            android:hint="@string/enter_address_of_the_authorized" />
 
         <ImageButton
             android:id="@+id/ib_input_representative"
