修改应用中round_icon的图标 delete unuse

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -6,6 +6,7 @@
         <attr name="showTitle" format="boolean" />
         <attr name="showHint" format="boolean" />
         <attr name="showLine" format="boolean" />
+        <attr name="singleLine" format="boolean" />
 
     </declare-styleable>
     <declare-styleable name="LineEditText">
