--- a/app/src/main/res/layout/activity_check_wallet_info.xml
+++ b/app/src/main/res/layout/activity_check_wallet_info.xml
@@ -115,6 +115,7 @@
         <TextView
             style="@style/black30_14_text_style"
             android:layout_marginTop="@dimen/d16"
+            android:lineSpacingExtra="@dimen/d3"
             android:text="@string/save_private_key_hint" />
 
         <include
@@ -140,6 +141,7 @@
         <TextView
             style="@style/black30_14_text_style"
             android:layout_marginTop="@dimen/d16"
+            android:lineSpacingExtra="@dimen/d3"
             android:text="@string/email_json_rule" />
 
         <Button
