--- a/app/src/main/res/layout/activity_import_wallet.xml
+++ b/app/src/main/res/layout/activity_import_wallet.xml
@@ -25,6 +25,7 @@
             style="@style/black_14_edit_text_style"
             android:layout_below="@+id/tv_title"
             android:layout_marginBottom="@dimen/d20"
+            android:lineSpacingExtra="@dimen/d3"
             android:layout_marginTop="@dimen/d16"
             android:hint="@string/enter_private_key"
             android:inputType="textMultiLine"
