--- a/app/src/main/res/layout/layout_loading_dailog.xml
+++ b/app/src/main/res/layout/layout_loading_dailog.xml
@@ -7,8 +7,8 @@
 
     <LinearLayout
         android:id="@+id/loadView"
-        android:layout_width="@dimen/d250"
-        android:layout_height="@dimen/d160"
+        android:layout_width="@dimen/d200"
+        android:layout_height="@dimen/d120"
         android:layout_centerInParent="true"
         android:background="@drawable/bg_loading_dialog"
         android:gravity="center"
@@ -29,7 +29,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/d10"
             android:textColor="@color/white"
-            android:textSize="@dimen/text_size_15" />
+            android:textSize="@dimen/text_size_15"
+            android:visibility="gone" />
     </LinearLayout>
 
 </RelativeLayout>
