修复oppo手机点击登录create wallet被遮蔽问题

--- a/app/src/main/res/layout/include_edit_text_password.xml
+++ b/app/src/main/res/layout/include_edit_text_password.xml
@@ -18,14 +18,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:singleLine="true"
             android:background="@color/transparent"
             android:digits="@string/password_rule"
             android:drawablePadding="@dimen/d10"
             android:hint="@string/enter_password"
             android:inputType="textPassword"
             android:maxLength="16"
-            android:paddingRight="@dimen/d40" />
+            android:paddingRight="@dimen/d40"
+            android:singleLine="true" />
 
         <CheckBox
             android:id="@+id/cbPwd"
