--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,49 +19,49 @@
             android:src="@mipmap/icon_bcaas" />
     </LinearLayout>
 
+    <include
+        layout="@layout/include_edit_text_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/d12"
+        android:layout_marginRight="@dimen/d12"
+        android:layout_marginTop="@dimen/d76" />
+
+    <View
+        style="@style/line_style"
+        android:layout_marginLeft="@dimen/d12"
+        android:layout_marginRight="@dimen/d12" />
+
+    <Button
+        android:id="@+id/btn_unlock_wallet"
+        style="@style/button_style"
+        android:layout_marginTop="@dimen/d30"
+        android:text="@string/unlock" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/d0"
-        android:layout_marginTop="@dimen/d76"
-        android:layout_weight="2">
-
-        <include
-            layout="@layout/include_edit_text_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/d20" />
-
-        <Button
-            android:id="@+id/btn_unlock_wallet"
-            style="@style/button_style"
-            android:layout_below="@+id/ll_password_key"
-            android:text="@string/unlock" />
-
+        android:layout_marginLeft="@dimen/d12"
+        android:layout_marginRight="@dimen/d12"
+        android:layout_marginTop="@dimen/d20"
+        android:layout_weight="1.3">
 
         <TextView
             android:id="@+id/tv_create_wallet"
             style="@style/black_16_text_style"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/btn_unlock_wallet"
-            android:layout_marginLeft="@dimen/d12"
-            android:layout_marginTop="@dimen/d20"
             android:drawableLeft="@mipmap/icon_create_wallet"
             android:drawablePadding="@dimen/d12"
-            android:padding="@dimen/d5"
+            android:gravity="center_vertical"
             android:text="@string/create_wallet" />
 
         <TextView
             android:id="@+id/tv_import_wallet"
             style="@style/black_16_text_style"
             android:layout_alignParentRight="true"
-            android:layout_below="@+id/btn_unlock_wallet"
-            android:layout_marginRight="@dimen/d12"
-            android:layout_marginTop="@dimen/d20"
             android:drawableLeft="@mipmap/icon_import_wallet"
             android:drawablePadding="@dimen/d12"
-            android:padding="@dimen/d5"
+            android:gravity="center_vertical"
             android:text="@string/import_wallet" />
     </RelativeLayout>
-
-
 </LinearLayout>
