「检查钱包信息」成功发送邮件携带附件

--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,19 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
-<!--<external-path-->
-<!--name="files_root"-->
-<!--path="Android/data/io.bcaas/" />-->
-<external-path
-    name="files"
-    path="/" />
-<files-path
-    name="files"
-    path="/" />
-<external-files-path
-    name="files"
-    path="/" />
-<root-path
-    name="root"
-    path="." />
+    <external-files-path
+        name="keystore"
+        path="bcaas/" />
 
 </paths>
